deploy/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-service
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: demo-service
          imagePullPolicy: IfNotPresent
